# foro-clang-format

./: .gitmodules  CMakeLists.txt  Cargo.toml  build.sh  dll-pack-build-global.sh  dll-pack-build-local.sh
.github/workflows/: release.yml
crates/clang-binding/: Cargo.toml  README.md  build.rs
crates/clang-binding/src/: bindings.rs  is_ignore.rs  lib.rs  main.rs  wrapper.cpp  wrapper.hpp
crates/foro-clang-format/: Cargo.toml
crates/foro-clang-format/src/: lib.rs  main.rs
src/: lib.cpp  lib.h  main.cpp  match_file_path.cpp
